# zserve

./: Cargo.toml  LICENSE  README.md
src/: crypto.rs  http.rs  lib.rs  main.rs  mdns.rs  server.rs
