[package]
name = "zserve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
mdns-sd = "0.13.1"
rcgen = "0.13.2"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["macros","rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
